fixed items per page on mobile

--- a/src/TenantFileGallery.css
+++ b/src/TenantFileGallery.css
@@ -280,8 +280,8 @@ img.responsive {
 
   }
   .items-per-page-selector {
-    width:100px;
-    margin-left:10px;
+    width:50px;
+    margin-left:22px;
   }
   .file-search-mobile {
     display:block;
